--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.515.0",
     "mongodb": "^6.17.0",
+    "netlify-cli": "^22.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
     "recharts": "^2.15.3",
     "tailwindcss": "^4.1.10",
+    "to": "^0.2.9",
+    "update": "^0.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
