--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "lucide-react": "^0.515.0",
     "mongodb": "^6.17.0",
+    "mongoose": "^8.16.3",
     "netlify-cli": "^22.2.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
