--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,3 @@
-[[functions]]
+[functions]
   directory = "netlify/functions"
-  included_files = ["node_modules/@dotenvx/**"]
+  external_node_modules = ["node_modules/@dotenvx/**"]
